<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main2Activity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/background" />

    <TextView
        android:id="@+id/main2_show1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-1dp"
        android:gravity="center"
        android:text="@string/blank" />

    <TextView
        android:id="@+id/main_show2"
        android:layout_width="411dp"
        android:layout_height="200dp"
        android:layout_below="@+id/main2_show1"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="340dp"
        android:gravity="center"
        android:text="@string/blank" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@android:style/Animation"
            android:text="@string/show_mean" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Animation"
            android:layout_weight="1"
            android:text="@string/next" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Animation"
            android:layout_weight="1"
            android:text="@string/forget" />
    </LinearLayout>

</RelativeLayout>