<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FirstFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/background" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:textColor="@color/design_default_color_primary"
        android:textSize="40sp"
        android:text="@string/welcome"
        tools:text="@string/welcome"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="563dp"
        android:layout_marginTop="200dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/showView"
            android:layout_width="541dp"
            android:layout_height="268dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/text_view"
            android:gravity="center"
            android:text="@string/blank"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="80sp"
            tools:text="@string/blank" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="447dp"
            android:layout_height="225dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="48dp"
            android:paddingEnd="20dp"
            android:text="@string/day"
            android:textColor="@color/design_default_color_primary"
            android:textSize="80sp"
            tools:text="@string/day" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:text="@string/first_text"
        android:gravity="center"
        android:textSize="20sp"
        tools:text="@string/first_text" />

</FrameLayout>